# WifiPad

./: Default.gamepad  README.txt
GamepadVerify/: GamepadVerify.cpp  Makefile.am  configure.ac
WifiPad-server/linux/: ButtonConfigDialog.cpp  ButtonConfigDialog.h  ButtonConfigDialog.ui  GamePadView.cpp  GamePadView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewConfigurationDialog.cpp  NewConfigurationDialog.h  NewConfigurationDialog.ui  main.cpp  wifipadserver.pro
WifiPad-server/macosx/: ApplicationDelegate.h  ApplicationDelegate.mm  ButtonConfigController.h  ButtonConfigController.mm  ButtonConfigWindow.h  ButtonConfigWindow.mm  GamePadConfigView.h  GamePadConfigView.mm  Info.plist  NewConfigurationWindowController.h  NewConfigurationWindowController.mm  PadConfigController.h  PadConfigController.mm  WifiPad.icns  WifiPadServer_Prefix.pch  main.m
WifiPad-server/win32/: ButtonConfigDialog.cpp  ButtonConfigDialog.h  Main.cpp  NewConfigurationDialog.cpp  NewConfigurationDialog.h  PadConfigDialog.cpp  PadConfigDialog.h  WifiPad.rc  WifiPadServer.iss  stdafx.h  (+5 more)
libWifiPad/: Ar.h  BufferedInputReader.cpp  BufferedInputReader.h  Configuration.cpp  Configuration.h  DataSink.h  DataSource.cpp  DataSource.h  Device.cpp  Device.h  Directory.cpp  Directory.h  FileDataSink.cpp  FileDataSink.h  FileDataSource.cpp  FileDataSource.h  GamePad.cpp  GamePad.h  KeySyms.h  LimitReader.cpp  LimitReader.h  Mutex.h  OS.h  Protocol.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketDataSource.cpp  SocketDataSource.h  Thread.h  Uuid.h  libWifiPad.vcproj  strsep.c
libs/: inttypes.h
(+33 files in other folders)
